<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Exclusive"
    tools:context=".auth.login.signup.SignupFragment">

    <!-- App Bar Layout -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Collapsing Toolbar -->
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <!-- Toolbar -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:contentInsetStart="0dp"
                android:contentInsetLeft="0dp"
                android:contentInsetEnd="0dp"
                android:contentInsetRight="0dp"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin"
                app:title="Collapsing Toolbar">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.digitalawesome.dispensary.components.views.atoms.icons.ThickIconView
                        android:id="@+id/iv_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/da_components_spacing_large"
                        app:da_components_isDarkBackground="false"
                        app:da_components_thickIcon="close"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/black" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:theme="@style/Theme.Exclusive">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/da_components_spacing_large"
            android:layout_marginTop="@dimen/da_components_spacing_extreme_large"
            android:orientation="vertical">

            <com.digitalawesome.dispensary.components.views.atoms.text.CustomFontTextView
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/da_components_spacing_very_large"
                android:includeFontPadding="false"
                android:text="@string/lbl_register"
                app:da_components_fontType="primary"
                app:da_components_textWeight="bold" />

            <com.digitalawesome.dispensary.components.views.atoms.text.CustomFontTextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/da_components_spacing_normal"
                android:text="@string/lbl_first_name"
                android:textColor="@color/input_field_label_color"
                android:textSize="@dimen/input_label"
                app:da_components_fontType="primary" />

            <com.digitalawesome.dispensary.components.views.molecules.inputs.TextField
                android:id="@+id/tf_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-28dp"
                android:hint="@string/lbl_first_name"
                app:da_components_label=""
                app:da_components_text="" />

            <com.digitalawesome.dispensary.components.views.atoms.text.CustomFontTextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/da_components_spacing_normal"
                android:text="@string/lbl_last_name"
                android:textColor="@color/input_field_label_color"
                android:textSize="@dimen/input_label"
                app:da_components_fontType="primary" />

            <com.digitalawesome.dispensary.components.views.molecules.inputs.TextField
                android:id="@+id/tf_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-28dp"
                android:hint="@string/lbl_last_name"
                app:da_components_label=""
                app:da_components_text="" />

            <com.digitalawesome.dispensary.components.views.atoms.text.CustomFontTextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/da_components_spacing_normal"
                android:text="@string/lbl_email"
                android:textColor="@color/input_field_label_color"
                android:textSize="@dimen/input_label"
                app:da_components_fontType="primary" />

            <com.digitalawesome.dispensary.components.views.molecules.inputs.TextField
                android:id="@+id/tf_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-28dp"
                android:hint="@string/lbl_email"
                app:da_components_label=""
                app:da_components_text="" />

            <com.digitalawesome.dispensary.components.views.atoms.text.CustomFontTextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/da_components_spacing_normal"
                android:text="@string/lbl_phone"
                android:textColor="@color/input_field_label_color"
                android:textSize="@dimen/input_label"
                app:da_components_fontType="primary"
                tools:ignore="HardcodedText" />

            <com.digitalawesome.dispensary.components.views.molecules.inputs.TextField
                android:id="@+id/tf_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-28dp"
                android:hint="@string/lbl_phone"
                app:da_components_label=""
                app:da_components_text="" />

            <com.digitalawesome.dispensary.components.views.atoms.text.CustomFontTextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/da_components_spacing_normal"
                android:text="@string/lbl_state"
                android:textColor="@color/input_field_label_color"
                android:textSize="@dimen/input_label"
                app:da_components_fontType="primary" />

            <com.digitalawesome.dispensary.components.views.molecules.inputs.TextField
                android:id="@+id/tf_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-28dp"
                android:hint="@string/lbl_state"
                app:da_components_label=""
                app:da_components_text="" />

            <com.digitalawesome.dispensary.components.views.atoms.text.CustomFontTextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/da_components_spacing_small"
                android:text="@string/lbl_password"
                android:textColor="@color/input_field_label_color"
                android:textSize="@dimen/input_label"
                app:da_components_fontType="primary" />

            <com.digitalawesome.dispensary.components.views.molecules.inputs.TextField
                android:id="@+id/tf_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-28dp"
                android:hint="@string/lbl_password"
                app:da_components_label=""
                app:da_components_text=""
                app:da_components_thinIcon="eye" />

            <com.digitalawesome.dispensary.components.views.atoms.text.CustomFontTextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/da_components_spacing_small"
                android:text="@string/lbl_confirm_pass"
                android:textColor="@color/input_field_label_color"
                android:textSize="@dimen/input_label"
                app:da_components_fontType="primary" />

            <com.digitalawesome.dispensary.components.views.molecules.inputs.TextField
                android:id="@+id/tf_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-28dp"
                android:hint="@string/lbl_confirm_pass"
                android:inputType="textPassword"
                app:da_components_label=""
                app:da_components_text=""
                app:da_components_thinIcon="eye" />

            <com.digitalawesome.dispensary.components.views.atoms.text.CustomFontTextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/da_components_spacing_small"
                android:text="@string/lbl_referal_code"
                android:textColor="@color/input_field_label_color"
                android:textSize="@dimen/input_label"
                app:da_components_fontType="primary" />

            <com.digitalawesome.dispensary.components.views.molecules.inputs.TextField
                android:id="@+id/tf_referral_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-28dp"
                android:hint="@string/lbl_referal_code"
                app:da_components_label=""
                app:da_components_text="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.digitalawesome.dispensary.components.views.atoms.controls.CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:theme="@style/Theme.Opt.Checkbox" />

                <com.digitalawesome.dispensary.components.views.atoms.text.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/lbl_opt_news"
                    android:textAlignment="center"
                    android:textColor="@color/primary_accent"
                    app:da_components_fontType="primary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.digitalawesome.dispensary.components.views.atoms.controls.CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:theme="@style/Theme.Opt.Checkbox" />

                <com.digitalawesome.dispensary.components.views.atoms.text.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/lbl_opt_text"
                    android:textAlignment="center"
                    android:textColor="@color/primary_accent"
                    app:da_components_fontType="primary" />

            </LinearLayout>

            <com.digitalawesome.dispensary.components.views.atoms.buttons.PrimaryButton
                android:id="@+id/bt_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/da_components_spacing_large"
                app:da_components_label="Register" />

            <com.digitalawesome.dispensary.components.views.atoms.text.CustomFontTextView
                android:id="@+id/tv_signup_footnote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/da_components_spacing_small"
                android:gravity="center"
                android:text="@string/signup_tos"
                android:textAlignment="center"
                android:textSize="@dimen/input_label"
                app:da_components_fontType="primary" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <com.digitalawesome.dispensary.components.views.atoms.text.CustomFontTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:text="@string/lbl_privacy"
                    android:textAlignment="center"
                    android:textColor="@color/primary_accent"
                    android:textSize="@dimen/input_label"
                    app:da_components_fontType="primary"
                    app:da_components_textWeight="bold" />

                <com.digitalawesome.dispensary.components.views.atoms.text.CustomFontTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/lbl_and"
                    android:textAlignment="center"
                    android:textSize="@dimen/input_label"
                    app:da_components_fontType="primary" />

                <com.digitalawesome.dispensary.components.views.atoms.text.CustomFontTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:text="@string/lbl_terms_service"
                    android:textAlignment="center"
                    android:textColor="@color/primary_accent"
                    android:textSize="@dimen/input_label"
                    app:da_components_fontType="primary"
                    app:da_components_textWeight="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/da_components_spacing_normal"
                android:layout_marginBottom="@dimen/da_components_spacing_very_large"
                android:gravity="center"
                android:orientation="horizontal">

                <com.digitalawesome.dispensary.components.views.atoms.text.CustomFontTextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/da_components_spacing_small"
                    android:gravity="center"
                    android:text="@string/lbl_already_member"
                    android:textAlignment="center"
                    app:da_components_fontType="primary" />

                <com.digitalawesome.dispensary.components.views.atoms.buttons.Link
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/lbl_login"
                    android:textAlignment="center"
                    app:da_components_fontType="primary"
                    app:da_components_textWeight="bold" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
